2007-12-10  Jeff Cai  <jeff.cai@sun.com>

	* em-folder-view.c: (emfv_setting_notify):
	If it is not FolderBrowser object, the pane size
	signal is not sent.
	Fix #501677

2007-12-07  Alex Kloss  <alexkloss@att.net>

	** Fix for bug #329706

	* em-utils.c (em_utils_prompt_user):
	Add mnemonic 'd' to 'Do not show...' checkbox
	* mail.error.xml:
	Remove redundant 'Send anyway' label
	Reorder buttons to 'Send','Cancel' as per HIG

2007-12-07  Akhil Laddha  <lakhil@novell.com>

	** Fix for bug #475508

	* em-folder-view.c:
	Changed the string for search folder and filter creation from
	message list to make it understandable.

2007-12-07  Denis Washington <denisw@svn.gnome.org>

	** Fix for bug #500561

	* em-folder-browser.c: Added icon for mark all messages as read menu 
	item.

2007-12-06  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #263236

	* em-folder-view.c: (emfv_delete_msg_response):
	Look for "Do not ask me again" check in alignment, so
	let it works properly.

2007-12-05  Srinivasa Ragavan  <sragavan@novell.com>

	* mail-config.h: Fix a compiler warning.

2007-12-05  Srinivasa Ragavan  <sragavan@novell.com>

	** Added a preference to disable Magic Spacebar.

	* em-folder-browser.c: (html_scroll), (emfb_list_key_press): Check the cfg 
	  before invoking Magic Spacebar
	* em-mailer-prefs.c: (em_mailer_prefs_construct): Preference window handling
	* em-mailer-prefs.h:
	* evolution-mail.schemas.in:
	* mail-config.c: (gconf_magic_spacebar_changed),
	(mail_config_init), (mail_config_get_enable_magic_spacebar): Add it part of MC.
	* mail-config.glade: 
	* mail-config.h:

2007-12-04  David Turner  <cillian64@googlemail.com>

	** Fix for bug #347329

	* em-folder-selector.c: (em_folder_selector_create_new):
	Added a mnemonic to the 'Create' button of the 'New Folder' dialog

2007-12-04  Alex Kloss  <alexkloss@att.net>

	** Fix for bug #329578

	* em-account-editor.c: (emae_receive_options_item):
	Add mnemonic for "minutes" widget
